--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-image: url('https://media.licdn.com/dms/image/v2/D4D12AQEe8oHiHcFAnQ/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1702027532775?e=2147483647&v=beta&t=q0D9msAllpx9krmj1apqPXD9m_zm7bqKYBHaO5xETJ0');
+    background-image: url('https://github.com/PolyDapps/dailypolygon/blob/main/dp.jpg');
     background-size: cover;
     background-position: center;
     color: white;
