--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-image: url('https://github.com/PolyDapps/dailypolygon/blob/main/dp.jpg');
+    background-image: url('https://raw.githubusercontent.com/PolyDapps/dailypolygon/refs/heads/main/dp.jpg');
     background-size: cover;
     background-position: center;
     color: white;
